<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f2f2f2"
    android:orientation="vertical"
    android:splitMotionEvents="false" >

    <RelativeLayout style="@style/vice_title" >

        <TextView
            style="@style/vice_title_textview"
            android:text="@string/model_1" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp" >

            <TextView
                style="@style/function_textview"
                android:text="@string/setting_open_box" />

            <com.qihoo.zxc.view.OptionCheckBox
                android:id="@+id/open_box_checkbox"
                style="@style/option_checkbox"
                android:checked="true" />
        </RelativeLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#efefef" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp" >

            <TextView
                style="@style/function_textview"
                android:text="@string/setting_speedup" />

            <com.qihoo.zxc.view.OptionCheckBox
                style="@style/option_checkbox"
                android:checked="true" />
        </RelativeLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#efefef" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp" >

            <TextView
                style="@style/function_textview"
                android:text="@string/setting_gift" />

            <com.qihoo.zxc.view.OptionCheckBox
                style="@style/option_checkbox"
                android:checked="true" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout style="@style/vice_title" >

        <TextView
            style="@style/vice_title_textview"
            android:text="@string/model_2" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/create_shortcut_layout"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/function_layout" >

            <TextView
                style="@style/function_textview"
                android:text="桌面创建安全游戏盒"/>
            <ImageView
                style="@style/option_checkbox"
                android:src="@drawable/go"
                android:checked="true" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>